--- a/style.css
+++ b/style.css
@@ -1,290 +1,442 @@
-body,html{
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
+body,
+html {
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
 }
-body{
-background-color: rgba(0, 0, 0, 0.926);
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-
-
+body {
+  background-color: rgba(0, 0, 0, 0.926);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.navbar{
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    
+.navbar {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
 }
 .navbar .nav-part1 {
-    color: white;
-    font-size: 3rem;
-    display: flex;
-    align-items: center;
-    margin-left: 100px;
+  color: white;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  margin-left: 100px;
 }
-.navbar .nav-part1 p span{
-    color: red;
+.navbar .nav-part1 p span {
+  color: red;
 }
-.navbar .nav-part2{
-display: flex;
-align-items: center;
-margin-right: 100px;
+.navbar .nav-part2 {
+  display: flex;
+  align-items: center;
+  margin-right: 100px;
 }
-.navbar .nav-part2 a{
-    text-decoration: none;
-    color: white;
-    font-size: 2rem;
-    margin-right: 30px;
+.navbar .nav-part2 a {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+  margin-right: 30px;
 }
-.navbar.sticky{
-    transition: all 1s;
-    height: 80px;
-    background-color: crimson;
+.navbar.sticky {
+  transition: all 1s;
+  height: 80px;
+  background-color: crimson;
 }
-.navbar.sticky .lio{
-    transition: all 1s;
-    color: white;
+.navbar.sticky .lio {
+  transition: all 1s;
+  color: white;
 }
-.navbar.sticky .nav-part2 a:hover{
-    color: black;
-    transition: color 1.5s;
+.navbar.sticky .nav-part2 a:hover {
+  color: black;
+  transition: color 1.5s;
 }
-.navbar .nav-part2 a:hover{
-color: red;
-transition: color 1.5s;
+.navbar .nav-part2 a:hover {
+  color: red;
+  transition: color 1.5s;
 }
 .write {
-    color: white;
-   margin-top: 50px;
-    font-size: 4rem;
-    margin-left: 250px;
-  
-  
-  
+  color: white;
+  margin-top: 50px;
+  font-size: 4rem;
+  margin-left: 250px;
 }
-#spe{
-    font-size: 7.5rem;
+#spe {
+  font-size: 7.5rem;
 }
-#spe span{
-    color: red;
+#spe span {
+  color: red;
 }
-.write p{
-margin-bottom: 0;
-margin-top: 0;
+.write p {
+  margin-bottom: 0;
+  margin-top: 0;
 }
-#spe-2{
-    font-size: 4.5rem;
+#spe-2 {
+  font-size: 4.5rem;
 }
-.write button{
-    background-color: rgb(220, 18, 18);
-    border: 1px solid;
-    border-color:rgb(220, 18, 18);
-    padding: 15px 30px;
-    font-size: 2rem;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    box-sizing: border-box;
-    margin-top: 20px;
+.write button {
+  background-color: rgb(220, 18, 18);
+  border: 1px solid;
+  border-color: rgb(220, 18, 18);
+  padding: 15px 30px;
+  font-size: 2rem;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  box-sizing: border-box;
+  margin-top: 20px;
 }
-.write button:hover{
-    border: 1px solid;
-    transition: all 0.8s;
-    box-sizing: border-box;
-background-color: transparent;
-color: rgb(220, 18, 18);
+.write button:hover {
+  border: 1px solid;
+  transition: all 0.8s;
+  box-sizing: border-box;
+  background-color: transparent;
+  color: rgb(220, 18, 18);
 
-border-color:rgb(220, 18, 18) ;
+  border-color: rgb(220, 18, 18);
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-   
-    height: 450px;
-    margin-top: 100px;
+header {
+  display: flex;
+  justify-content: space-between;
 
-  
+  height: 450px;
+  margin-top: 100px;
 }
-#pic{
-    
-    background-image: url(image/mann2.png);
-    background-repeat: no-repeat;
-    background-position: right;
+#pic {
+  background-image: url(image/mann2.png);
+  background-repeat: no-repeat;
+  background-position: right;
   width: 400px;
   position: fixed;
   height: 400px;
-left: 75%;
+  left: 75%;
   z-index: -5;
 }
-#about{
-  
-    padding-top: 80px;
-    background-color: white;
-    position: relative;
-    padding-left: 50px;
-    padding-right: 50px;
+#about {
+  padding-top: 80px;
+  background-color: white;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
 }
-#about #about-main{
-    display: flex;
-  
+#about #about-main {
+  display: flex;
 }
-#about h2{
-    text-align: center;
-    font-size: 4rem;
-    
+#about h2 {
+  text-align: center;
+  font-size: 4rem;
 }
-#pp{
-width: 45%;
+#pp {
+  width: 45%;
 }
-#ab{
-font-size: 2rem;
-width: 55%;
+#ab {
+  font-size: 2rem;
+  width: 55%;
 }
-#ab p{
-    text-align: justify;
-    max-width: 800px;
+#ab p {
+  text-align: justify;
+  max-width: 800px;
 }
-#ab h3{
-    font-size: 3rem;
-    
+#ab h3 {
+  font-size: 3rem;
 }
-#ab button{
-    font-size: 2rem;
-    padding: 15px 30px;
-    color: white;
-    background-color: red;
-    border: 1px solid red;
-    border-radius: 7px;
-    cursor: pointer;
+#ab button {
+  font-size: 2rem;
+  padding: 15px 30px;
+  color: white;
+  background-color: red;
+  border: 1px solid red;
+  border-radius: 7px;
+  cursor: pointer;
 }
-#ab button:hover{
-    transition: all 0.5s;
-    background-color: transparent;
-    color: red;
+#ab button:hover {
+  transition: all 0.5s;
+  background-color: transparent;
+  color: red;
 }
-#about hr{
-    width: 200px;
-    border-top: 5px solid black;
+#about hr {
+  width: 200px;
+  border-top: 5px solid black;
 }
-#about #psp{
-    font-size: 3rem;
-    color: red;
-    text-align: center;
-    position: absolute;
-    top: 145px;
-    background-color: white;
-    left: 50%;
-    transform: translate(-50%);
-    width: 135px;
+#about #psp {
+  font-size: 3rem;
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 145px;
+  background-color: white;
+  left: 50%;
+  transform: translate(-50%);
+  width: 135px;
 }
 
-  .sss{
-    color: red;
+.sss {
+  color: red;
+  opacity: 0;
+  animation-name: ani;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ani {
+  0% {
     opacity: 0;
-animation-name: ani;
-animation-duration: 2s;
-animation-iteration-count: infinite;
   }
-
-  @keyframes ani {
-    0% {
-      opacity: 0;
-    }
-    40% {
-      opacity: 1;
-    }
+  40% {
+    opacity: 1;
   }
- 
-  #service{
-  
-    padding-top: 80px;
-    background-color: black;
-    color: white;
-    position: relative;
-    padding-left: 50px;
-    padding-right: 50px;
 }
 
-#service h2{
-    text-align: center;
-    font-size: 4rem;
-    
-}
-#psp-2{
-width: 45%;
-color: red;
-}
-#service hr{
-    width: 220px;
-    border-top: 4px solid white;
-    
-}
-#psp-2{
-    font-size: 2.5rem;
-    color: red;
-    text-align: center;
-    position: absolute;
-    top: 155px;
-    background-color: black;
-    left: 50%;
-    transform: translate(-50%);
-    width: 175px;
-    
-}
-.ser-sec{
-display: grid;
-grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
-gap: 30px;
-grid-template-rows: auto auto;
-margin-top: 80px;
-padding: 0 50px;
-}
-.seri-1{
-    text-align: center;
-background-color: rgb(40, 39, 39);
-padding-top: 60px;
-border-radius: 10px;
-
+#service {
+  padding-top: 80px;
+  background-color: black;
+  color: white;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 100px;
 }
 
-.seri-1 i{
-color: crimson;
-font-size: 7rem;
+#service h2 {
+  text-align: center;
+  font-size: 4rem;
 }
-.seri-1 h3{
-    font-size: 4rem;
+#psp-2 {
+  width: 45%;
+  color: red;
 }
-.seri-1 p{
-    font-size: 2.5rem;
-    padding: 10px 60px;
-    margin-bottom: 50px;
+#service hr {
+  width: 220px;
+  border-top: 4px solid white;
+}
+#psp-2 {
+  font-size: 2.5rem;
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 155px;
+  background-color: black;
+  left: 50%;
+  transform: translate(-50%);
+  width: 175px;
+}
+.ser-sec {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  grid-template-rows: auto auto;
+  margin-top: 80px;
+  padding: 0 50px;
+}
+.seri-1 {
+  text-align: center;
+  background-color: rgb(40, 39, 39);
+  padding-top: 60px;
+  border-radius: 10px;
+}
+
+.seri-1 i {
+  color: crimson;
+  font-size: 7rem;
+}
+.seri-1 h3 {
+  font-size: 4rem;
+}
+.seri-1 p {
+  font-size: 2.5rem;
+  padding: 10px 60px;
+  margin-bottom: 50px;
 }
 .seri-1:hover {
-    transition: all .2s ease-in-out;
- background-color: crimson;
-color: white;
-cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  background-color: crimson;
+  color: white;
+  cursor: pointer;
 
-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.seri-1:hover i {
+  transition: all 0.2s ease-in-out;
+  color: white;
+  transform: scale(1.06);
+}
+.seri-1:hover h3 {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.06);
+}
+.seri-1:hover p {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.06);
+}
+::-webkit-scrollbar {
+  width: 20px;
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(red, yellow, red);
+  border-radius: 15px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
 
-}
-.seri-1:hover i{
-    transition: all .2s ease-in-out;
-color: white;
-transform: scale(1.06);
-}
-.seri-1:hover h3{
-    transition: all .2s ease-in-out;
-    transform: scale(1.06);
-}
-.seri-1:hover p{
-    transition: all .2s ease-in-out;
-    transform: scale(1.06);
+#service--2 {
+  padding-top: 80px;
+  background-color: white;
+  color: black;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 100px;
 }
 
+#service--2 h2 {
+  text-align: center;
+  font-size: 4rem;
+}
+#psp-2 {
+  width: 45%;
+  color: red;
+}
+#service--2 hr {
+  width: 220px;
+  border-top: 4px solid black;
+}
+#psp-2 {
+  font-size: 2.5rem;
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 155px;
+  background-color: black;
+  left: 50%;
+  transform: translate(-50%);
+  width: 175px;
+}
+#psp-3 {
+  font-size: 2.5rem;
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 155px;
+  background-color: white;
+  left: 50%;
+  transform: translate(-50%);
+  width: 175px;
+}
+.parts {
+  display: flex;
+
+  font-size: 2.5rem;
+  padding-top: 40px;
+}
+.part-1 p {
+  font-size: 2rem;
+  text-align: justify;
+}
+.part-1 {
+  width: 50%;
+  margin-right: 40px;
+}
+.part-2 {
+  width: 50%;
+  margin-left: 40px;
+  margin-top: 50px;
+}
+.buttooon {
+  font-size: 2rem;
+  padding: 15px 30px;
+  color: white;
+  background-color: red;
+  border: 1px solid red;
+  border-radius: 7px;
+  cursor: pointer;
+}
+.buttooon:hover {
+  transition: all 0.5s;
+  background-color: transparent;
+  color: red;
+}
+.part-2 .item--1 {
+  display: flex;
+  justify-content: space-between;
+}
+.bar {
+  height: 7px;
+  margin-top: 5px;
+  background-color: gray;
+}
+.bar .color-0 {
+  background-color: red;
+  width: 0;
+  height: 100%;
+}
+.bar .color-1 {
+  background-color: red;
+  width: 0;
+  height: 100%;
+}
+.bar .color-2 {
+  background-color: red;
+  width: 0;
+  height: 100%;
+}
+.bar .color-3 {
+  background-color: red;
+  width: 0;
+  height: 100%;
+}
+.bar .color-4 {
+  background-color: red;
+  width: 0;
+  height: 100%;
+  animation-duration: 4s;
+}
+.items {
+  margin-top: 20px;
+}
+
+@keyframes ani {
+  from {
+    width: 0;
+  }
+  to {
+    width: 90%;
+  }
+}
+@keyframes ani2 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 75%;
+  }
+}
+@keyframes ani3 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 70%;
+  }
+}
+@keyframes ani4 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 75%;
+  }
+}
+@keyframes ani5 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 85%;
+  }
+}
