--- a/style.css
+++ b/style.css
@@ -173,15 +173,15 @@ header {
   width: 135px;
 }
 
-.sss {
+.sssss {
   color: red;
   opacity: 0;
-  animation-name: ani;
+  animation-name: anni;
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
-@keyframes ani {
+@keyframes anni {
   0% {
     opacity: 0;
   }
@@ -439,4 +439,290 @@ header {
   to {
     width: 85%;
   }
+}
+
+.teams {
+  padding-top: 80px;
+  background-color: black;
+  color: white;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 100px;
+}
+
+.teams h2 {
+  text-align: center;
+  font-size: 4rem;
+}
+.teams #psp-t {
+  width: 45%;
+  color: red;
+}
+.teams hr {
+  width: 220px;
+  border-top: 4px solid white;
+}
+.teams #psp-t {
+  font-size: 2.5rem;
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 155px;
+  background-color: black;
+  left: 50%;
+  transform: translate(-50%);
+  width: 175px;
+}
+.container {
+  height: 400px;
+  width: 100%;
+  margin: auto;
+
+  margin-top: 30px;
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+.containe--item {
+  position: absolute;
+  box-sizing: border-box;
+  background-color: rgba(100, 93, 93, 0.314);
+  display: inline-block;
+  height: 100%;
+  width: 50%;
+  text-align: center;
+  border-right: 10px solid black;
+  border-left: 10px solid black;
+  transition: transform 0.2s;
+  border-radius: 35px;
+}
+@media (max-width: 900px) {
+  .containe--item {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1600px) {
+  .containe--item {
+    width: 33.3333%;
+  }
+}
+.containe--item:hover {
+  background-color: crimson;
+  transition: all 0.5s;
+}
+.containe--item:hover.containe--item img {
+  border-color: white;
+  transition: all 0.5s;
+  transform: scale(1.05);
+}
+.containe--item:hover.containe--item h3 {
+  transition: all 0.5s;
+  transform: scale(1.05);
+}
+.containe--item:hover.containe--item p {
+  transition: all 0.5s;
+  transform: scale(1.05);
+}
+.containe--item h3 {
+  font-size: 3rem;
+  margin: 0;
+}
+.containe--item p {
+  font-size: 1.5rem;
+  padding: 5px 15px;
+}
+.containe--item img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: 5px solid red;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+
+.btn {
+  font-size: 40px;
+
+  position: absolute;
+  z-index: 10;
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  height: 70px;
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+
+  transform: translateY(-50%);
+}
+.next-btn {
+  top: 50%;
+}
+.left-btn {
+  top: 50%;
+  right: 0;
+}
+.dots {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+.dots .dot {
+  transition: all 0.5s;
+  margin: 5px;
+  height: 10px;
+  width: 10px;
+  border: 1px solid red;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.dots .dot:hover {
+  background-color: crimson;
+}
+.dot--active {
+  transition: all 0.5s;
+  width: 30px !important;
+  border-radius: 14px !important;
+  background-color: crimson;
+}
+.nav-link {
+  transition: 1s;
+}
+.part {
+  display: flex;
+}
+.part1 {
+  width: 100%;
+}
+.part1 h3 {
+  font-size: 3rem;
+}
+.part1 p {
+  font-size: 2rem;
+}
+.part1 .info {
+  margin-bottom: 30px;
+}
+.bla {
+  font-weight: bolder;
+}
+.part2 i {
+  color: black;
+  font-size: 200px;
+  margin: auto;
+  position: absolute;
+  animation-name: move;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+.part2 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.ppp {
+  width: 100%;
+  height: 100%;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ppp button {
+  position: absolute;
+  top: 300px;
+  background-color: crimson;
+  color: white;
+  font-size: 20px;
+  padding: 15px 25px;
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+@keyframes move {
+  from {
+    margin-top: 0;
+    color: black;
+  }
+  to {
+    margin-top: 380px;
+    color: crimson;
+  }
+}
+.special {
+  padding: 15px 25px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 400px;
+  width: 40%;
+  background-color: darkgray;
+  text-align: center;
+  z-index: 1000;
+}
+.special input {
+  border: none;
+  font-size: 2rem;
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  padding: 15px;
+  width: 94%;
+  margin-top: 20px;
+  font-weight: bolder;
+}
+.special input::placeholder {
+  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.671);
+}
+.special input:focus {
+  outline: none;
+
+  border: 2px solid white;
+  border-radius: 5px;
+}
+.special button {
+  font-size: 2rem;
+  padding: 20px 50px;
+  background-color: crimson;
+  border: none;
+  border-radius: 10px;
+  margin-top: 30px;
+  cursor: pointer;
+  color: white;
+}
+.special-hidden {
+  display: none;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 555;
+}
+.papar {
+  width: 100%;
+  display: flex;
+
+  justify-content: space-between;
+}
+#dd {
+  margin-right: 10px;
+}
+footer {
+  background-color: black;
+  height: 100px;
 }
