--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
   font-size: 10px;
 }
 body {
-  background-color: rgba(0, 0, 0, 0.926);
+  background-color: rgb(0, 0, 0);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -112,7 +112,9 @@ header {
   width: 400px;
   position: fixed;
   height: 400px;
-  left: 75%;
+  left: 45%;
+  margin-left: 36%;
+
   z-index: -5;
 }
 #about {
@@ -724,5 +726,158 @@ header {
 }
 footer {
   background-color: black;
-  height: 100px;
+
+  color: white;
+  font-size: 2.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer p a {
+  color: crimson;
+  display: inline-block;
+  text-decoration: none;
+
+  border-bottom: 1px solid transparent;
+}
+footer p a::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: crimson;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+footer p a:hover::after {
+  width: 100%;
+}
+
+.up-btn {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: crimson;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  color: white;
+  font-size: 2.3rem;
+}
+.b-hidden {
+  display: none;
+}
+@media (max-width: 1200px) {
+  #about #about-main {
+    display: block;
+  }
+  #about #pp {
+    width: 100%;
+    text-align: center;
+  }
+  #about #ab {
+    width: 100%;
+    text-align: center;
+  }
+  #about #ab p {
+    width: 100%;
+    text-align: center;
+  }
+  #about {
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+  }
+
+  #about h2 {
+    text-align: center;
+    font-size: 4rem;
+  }
+  #pp {
+    width: 100%;
+  }
+  #ab {
+    font-size: 2rem;
+    width: 100%;
+  }
+  #ab p {
+    text-align: justify;
+    max-width: 1800px;
+  }
+  .parts {
+    display: block;
+  }
+  .parts .part-1 {
+    width: 100%;
+    text-align: center;
+  }
+  .parts .part-1 p {
+    width: 100%;
+    text-align: center;
+  }
+  .parts .part-2 {
+    width: 100%;
+    padding-right: 60px;
+    box-sizing: border-box;
+  }
+  .part {
+    display: block;
+  }
+  .part .part1 {
+    width: 100%;
+  }
+  .part .part2 {
+    padding-bottom: 400px;
+  }
+  #Home .write {
+    margin-left: 55px;
+  }
+  .navbar i {
+    display: block !important;
+  }
+  .navbar .nav-part2 {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    align-items: center;
+    transition: left 1s;
+    text-align: center;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+  }
+
+  .navbar .nav-part2 .nav-link {
+    display: block;
+    text-align: center;
+
+    margin: 30px;
+    text-align: center;
+    font-size: 4rem;
+  }
+  .nav-link:hover {
+    color: crimson !important;
+  }
+}
+@media (max-width: 800px) {
+  #pic {
+    margin-left: 58%;
+  }
+}
+.navbar i {
+  position: absolute;
+  right: 50px;
+  bottom: 30%;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+.left {
+  left: -1800px;
 }
